[tool.poetry]
name = "streamlit-ai"
version = "0.1.0"
description = ""
authors = ["takuto.kotsubo <leeloon831@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.7 || >3.9.7,<4.0"
streamlit = "1.24.0"
openai = "^0.27.8"
tiktoken = "^0.4.0"
langchain = "^0.0.261"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
